--- a/src/styles.css
+++ b/src/styles.css
@@ -104,7 +104,7 @@ section {
   text-decoration: none;
   position: relative;
   overflow: hidden;
-  z-index: 1;
+  z-index: 1 !important;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
